--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "liri-node-app",
   "version": "1.0.0",
-  "description": "Pulls data from Twitter and Spotify",
+  "description": "LIRI is a Language Interpretation and Recognition Interface. LIRI is a command line node app that takes in parameters and gives you back data.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node liri.js"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,8 @@
   },
   "homepage": "https://github.com/maike-hilda/liri-node-app#readme",
   "dependencies": {
-    "file-system": "^2.2.2",
-    "imdb-api": "^3.1.1",
+    "node-spotify-api": "^1.0.7",
     "request": "^2.81.0",
-    "spotify": "^0.3.0",
     "twitter": "^1.7.1"
   }
 }
